# rs2

./: README.md  bensTest.cpp
TestingCrap/: FaceCaptureTest.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/selfie_cpp_pkg/share/ament_index/resource_index/parent_prefix_path/: selfie_cpp_pkg
install/selfie_cpp_pkg/share/selfie_cpp_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/selfie_py_pkg/lib/selfie_py_pkg/: move_ur3_node_app
install/selfie_py_pkg/share/selfie_py_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/image_processing_pkg/: CMakeLists.txt  package.xml
src/image_processing_pkg/src/: image_capture_linux.cpp  image_processing_node.cpp  image_test_eyes.cpp  node_rework.cpp  node_working.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/points_pub_pkg/: CMakeLists.txt  package.xml  src$
src/points_pub_pkg/src/: image_node.cpp  test_node.cpp
src/selfie_cpp_pkg/: CMakeLists.txt  package.xml
src/selfie_cpp_pkg/src/: moveit_sim_move.cpp  path_planning.cpp  path_planning_node.cpp  raw_goal_node.cpp  system_status_node.cpp  toolbox.cpp  ur3_driver_node.cpp
src/selfie_cpp_pkg/srv/: pose_service.srv
src/selfie_cpp_pkg/test/: utest.cpp
src/selfie_py_pkg/: package.xml  setup.cfg
src/selfie_py_pkg/selfie_py_pkg/: move_ur3_node.py
src/selfie_robot_bringup/: package.xml
src/selfie_robot_bringup/launch/: move_ur3.launch.xml  selfie_app.launch.xml
ur3_selfie_drawing/selfie_cpp_pkg/: CMakeLists.txt
ur3_selfie_drawing/selfie_cpp_pkg/src/: system_status.cpp
ur3_selfie_drawing/selfie_py_pkg/: setup.py
ur3_selfie_drawing/selfie_robot_bringup/: CMakeLists.txt
ur3_selfie_drawing/selfie_robot_bringup/launch/: move_ur3.launch.xml
ur3_selfie_drawing_pkg/: CMakeLists.txt  package.xml
ur3_selfie_drawing_pkg/src/: path_planning.cpp
